--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,8 @@
     color: var(--bs-gray-700);
     font-weight: 500;
     font-size: 16px;
-    width: 35px;
-    height: 35px;
+    width: 38px;
+    height: 38px;
     transition: var(--transition-default);
     border:1px solid #ECECEC;
 }
@@ -44,14 +44,16 @@
 .section-form .form-group-input .form-label{
     height: 40px;
     font-weight: 500;
+    font-size: 1em;
 }
 .section-form .form-group-input .form-control{
     border: 1px solid transparent;
     border-radius: 0;
     padding: 3px;
     color:var(--primary-color);
-    max-width: 135px;
+    max-width: 145px;
     font-weight: 500;
+    font-size: 1em;
 }
 .section-form .form-group-input .form-control::placeholder{
     color:#D9D9D9;
