--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -35,8 +35,8 @@ body {
     font-weight: 400;
     font-style: normal;
     background-color: var(--bs-white);
-    overflow-x: hidden;
     letter-spacing: 0.5px;
+    height: 100%;
 }
 
 .main > .position-absolute.overflow-y {
@@ -417,7 +417,7 @@ textarea:focus {
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-    font-size: 1em;
+    font-size: 1.05em;
     font-weight: 600;
     -webkit-transition: var(--transition-default);
     -o-transition: var(--transition-default);
