--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,8 @@
     color: var(--bs-gray-700);
     font-weight: 500;
     font-size: 16px;
-    width: 38px;
-    height: 38px;
+    width: 40px;
+    height: 40px;
     transition: var(--transition-default);
     border:1px solid #ECECEC;
 }
@@ -38,22 +38,22 @@
     max-width: 400px;
 }
 .section-form .form-group-input{
-    font-size: 1.2em;
+    font-size: 1.3em;
     height: 40px;
 }
 .section-form .form-group-input .form-label{
     height: 40px;
     font-weight: 500;
-    font-size: 1em;
+    font-size: 18px;
 }
 .section-form .form-group-input .form-control{
     border: 1px solid transparent;
     border-radius: 0;
     padding: 3px;
     color:var(--primary-color);
-    max-width: 145px;
+    max-width: 150px;
     font-weight: 500;
-    font-size: 1em;
+    font-size: 18px;
 }
 .section-form .form-group-input .form-control::placeholder{
     color:#D9D9D9;
