--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -36,7 +36,8 @@ body {
     font-style: normal;
     background-color: var(--bs-white);
     letter-spacing: 0.5px;
-    height: 100%;
+    height: 100vh;
+    overflow: hidden;
 }
 
 .main > .position-absolute.overflow-y {
