--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,8 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Pridi:wght@200;300;400;500;600;700&display=swap');
 :root {
     --transition-default: 0.3s all ease-in-out;
-    --font-heading: "Poppins", serif;
+    --font-heading: "Pridi", serif;
     --font-theme: "Poppins", serif;
     --size-theme: 14px;
 
@@ -523,6 +522,9 @@ textarea:focus {
 
 .text-secondary {
     color: var(--secondary-color) !important;
+}
+.font-heading{
+    font-family: var(--font-heading);
 }
 
 .section-page {
