--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,10 @@
     height: 75px;
     margin-bottom: 50px;
 }
+
+.header-logo.header-logo-done{
+    margin-bottom: 30px;
+}
 .section-form{
     max-width: 400px;
 }
