--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-.section-header{
+.section-header {
     padding: 20px 0;
 }
 
@@ -14,69 +14,82 @@
     width: 40px;
     height: 40px;
     transition: var(--transition-default);
-    border:1px solid #ECECEC;
+    border: 1px solid #ECECEC;
 }
-.section-header .header-back svg{
+
+.section-header .header-back svg {
     width: 16px;
     height: 16px;
 }
-.section-header .header-back:hover{
-    background-color:var(--secondary-color);
-    color:var(--bs-white);
+
+.section-header .header-back:hover {
+    background-color: var(--secondary-color);
+    color: var(--bs-white);
     border: 1px solid var(--secondary-color);
 }
-.section-header .header-back:hover svg path{
+
+.section-header .header-back:hover svg path {
     fill: var(--bs-white);
 }
-.section-header .header-title{
+
+.section-header .header-title {
     line-height: normal;
-    font-size: 2em;
-    transform: translate(-30%, -50%);
+    font-size: 1.7em;
+    transform: translate(-50%, -50%);
 }
-.page-theme .section-body{
+
+.page-theme .section-body {
     padding: 90px 0 50px 0;
 }
-.page-theme .section-header .header-back{
+
+.page-theme .section-header .header-back {
     background-color: var(--bs-white);
 }
-.page-theme .section-header .header-back:hover{
+
+.page-theme .section-header .header-back:hover {
     background-color: var(--secondary-color);
 }
 
-.header-logo{
+.header-logo {
     width: 75px;
     height: 75px;
     margin-bottom: 50px;
 }
 
-.header-logo.header-logo-done{
+.header-logo.header-logo-done {
     margin-bottom: 30px;
 }
-.section-form{
+
+.section-form {
     max-width: 400px;
 }
-.section-form .form-group-input{
+
+.section-form .form-group-input {
     font-size: 1.3em;
     height: 40px;
 }
-.section-form .form-group-input .form-label{
+
+.section-form .form-group-input .form-label {
     height: 40px;
     font-weight: 500;
     font-size: 18px;
 }
-.section-form .form-group-input .form-control{
+
+.section-form .form-group-input .form-control {
     border: 1px solid transparent;
     border-radius: 0;
     padding: 3px;
-    color:var(--primary-color);
+    color: var(--primary-color);
     max-width: 150px;
     font-weight: 500;
     font-size: 18px;
 }
-.section-form .form-group-input .form-control::placeholder{
-    color:#D9D9D9;
+
+.section-form .form-group-input .form-control::placeholder {
+    color: #D9D9D9;
 }
-.section-form .view-pass{
+
+.section-form .view-pass {
     color: #B1B1B1;
     width: 40px;
     height: 40px;
@@ -90,52 +103,190 @@
     z-index: 2;
 
 }
-.section-form__decor-left .circle-1{
+
+.section-form__decor-left .circle-1 {
     top: 20%;
     left: 10vw;
     width: 10px;
     height: 10px;
 }
-.section-form__decor-left .star-left{
+
+.section-form__decor-left .star-left {
     top: 36%;
     left: 0;
     width: 40px;
     height: 40px;
 }
-.section-form__decor-left .circle-2{
+
+.section-form__decor-left .circle-2 {
     top: 66%;
     left: 2vw;
     width: 10px;
     height: 10px;
 }
-.section-form__decor-right .circle-3{
+
+.section-form__decor-right .circle-3 {
     top: 32%;
     right: 2vw;
     width: 6px;
     height: 6px;
 }
-.section-form__decor-right .star-right{
+
+.section-form__decor-right .star-right {
     top: 77%;
     right: 2vw;
     width: 30px;
     height: 30px;
 }
-.section-form__decor-right .circle-4{
+
+.section-form__decor-right .circle-4 {
     top: 56%;
     right: 8vw;
     width: 6px;
     height: 6px;
 }
-.section-form__link{
-    color:#B1B1B1;
+
+.section-form__link {
+    color: #B1B1B1;
     font-size: 0.95em;
     margin-top: 10px;
 }
-.section-form__link:hover{
-    color:var(--secondary-color);
+
+.section-form__link:hover {
+    color: var(--secondary-color);
 }
-@media(max-width: 576px) {
-    .section-form{
+
+@media (max-width: 576px) {
+    .section-form {
         max-width: 350px;
+    }
+}
+
+.profile-avatar {
+    width: 120px;
+    height: 120px;
+}
+
+.profile-avatar .image-avatar {
+    width: 85px;
+    height: 85px;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.profile-name {
+    font-size: 1.7em;
+}
+
+.profile-item:last-child {
+    margin-left: 25px;
+    padding-left: 25px;
+    border-left: 1px solid var(--bs-gray-500);
+}
+
+.section-profile__body {
+    padding: 20px;
+    background-color: #F3EFFF;
+}
+
+.profile-button {
+    font-weight: 500;
+    padding: 12px 20px;
+    border-radius: 15px;
+    color: var(--primary-color);
+    background-color: var(--secondary-color-50);
+}
+
+.profile-button.disabled {
+    color: var(--secondary-color);
+    pointer-events: none;
+}
+
+.profile-button:hover {
+    color: var(--primary-color);
+    background-color: var(--secondary-color);
+}
+
+.profile-button__image {
+    width: 16px;
+    height: 16px;
+    display: flex;
+}
+
+.profile-button__icon svg {
+    width: 13px;
+    height: 13px;
+}
+
+.profile-button__arrow svg {
+    width: 12px;
+    height: 12px;
+}
+
+.profile-button:hover svg path {
+    fill: var(--bs-white);
+}
+
+.section-profile__decor-left .star-left {
+    top: 8%;
+    left: 7vw;
+    width: 50px;
+    height: 50px;
+}
+
+.section-profile__decor-left .circle-1 {
+    top: 24%;
+    left: 22vw;
+    width: 6px;
+    height: 6px;
+}
+
+.section-profile__decor-left .circle-2 {
+    top: 33%;
+    left: 5vw;
+    width: 10px;
+    height: 10px;
+}
+
+.section-profile__decor-right .circle-3 {
+    top: 11%;
+    right: 26vw;
+    width: 6px;
+    height: 6px;
+}
+
+.section-profile__decor-right .star-right {
+    top: 20%;
+    right: 10vw;
+    width: 35px;
+    height: 35px;
+}
+
+.section-profile__decor-right .circle-4 {
+    top: 40%;
+    right: 8vw;
+    width: 6px;
+    height: 6px;
+}
+
+@media (max-width: 576px) {
+    .section-profile__body {
+        padding: 12px;
+    }
+
+    .profile-button,
+    .profile-item {
+        font-size: 0.9em;
+    }
+
+    .profile-button {
+        padding: 12px 15px;
+    }
+
+    .profile-item:last-child {
+        margin-left: 15px;
+        padding-left: 15px;
     }
 }
