--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -271,12 +271,12 @@
     height: 6px;
 }
 .profile-button__edit{
-    width: 30px;
-    height: 30px;
+    width: 32px;
+    height: 32px;
     border: 1px solid transparent;
     position: absolute;
-    right: 11px;
-    top: 20px;
+    right: 10px;
+    top: 23px;
     z-index: 2;
     box-shadow: 0px 0px 32px 0px #00000003 !important;
 }
@@ -286,6 +286,9 @@
 .profile-button__edit svg{
     width: 15px;
     height: 15px;
+}
+.profile-button__edit svg path{
+    fill: var(--bs-gray-900);
 }
 .profile-form .form-group label{
     font-size: 1.1em;
