--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -313,6 +313,21 @@
     height: 16px;
 }
 
+.form-search .form-control{
+    border: 1px solid transparent;
+    font-weight: 500;
+    border-radius: 25px;
+    padding: 2px 5px 3px 40px;
+    height: 40px;
+    font-size: 1.05em;
+}
+.form-search__icon{
+    width: 40px;
+}
+.form-search__icon svg{
+    width: 15px;
+    height: 15px;
+}
 @media (max-width: 576px) {
     .section-profile__body {
         padding: 12px;
