updat code today

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -13,6 +13,8 @@
 
     --secondary-color: #AC8EFA;
     --secondary-color-50:#E0D3FF;
+
+    --gray-color:#B0B2BB;
     --bg-gradient:linear-gradient(to bottom,#D1C3F6,#9E7BFB);
 
     --dark-color: #111215;
