--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -498,26 +498,15 @@ textarea:focus {
     border-color: var(--dark-color);
     background-color: var(--bs-white);
 }
-
-.button-theme.button-theme_light {
-    background-color: #C8CBD3;
+.button-theme.button-theme_secondary {
+    background-color:var(--secondary-color);
     color: var(--bs-white);
     border-color: transparent;
 }
-
-.button-theme.button-theme_primary:active {
-    color: var(--bs-white);
-    border-color: var(--primary-hover);
-    background-color: var(--primary-hover);
-}
-
-.button-theme.button-theme_outline_primary:active,
-.button-theme.button-theme_overlay:active,
-.button-theme.button-theme_outline_dark:active,
-.button-theme.button-theme_light:active {
-    color: var(--bs-white);
-    border-color: var(--primary-color);
-    background-color: var(--primary-color);
+.button-theme.button-theme_light {
+    background-color:var(--bs-white);
+    color: var(--dark-color);
+    border-color: transparent;
 }
 
 .button-theme.button-theme_primary:active svg path,
@@ -547,7 +536,12 @@ textarea:focus {
 .section-heading {
     margin-bottom: 30px;
 }
-
+.heading-title {
+    font-size: 2.6em;
+    font-weight: 600;
+    margin-bottom: 0;
+    line-height: 1.15;
+}
 .heading-title-3 {
     font-size: 2em;
     font-weight: 600;
