--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,8 @@
     padding: 20px 0;
 }
 
-.section-header .header-back {
+.section-header .header-back,
+.section-header .header-delete{
     background-color: #ECECEC;
     border-radius: 50%;
     display: inline-flex;
@@ -17,18 +18,24 @@
     border: 1px solid #ECECEC;
 }
 
-.section-header .header-back svg {
+.section-header .header-back svg{
     width: 16px;
     height: 16px;
 }
+.section-header .header-delete svg{
+    width: 11px;
+    height: 14px;
+}
 
-.section-header .header-back:hover {
+.section-header .header-back:hover,
+.section-header .header-delete:hover{
     background-color: var(--secondary-color);
     color: var(--bs-white);
     border: 1px solid var(--secondary-color);
 }
 
-.section-header .header-back:hover svg path {
+.section-header .header-back:hover svg path,
+.section-header .header-delete:hover svg path{
     fill: var(--bs-white);
 }
 
@@ -560,9 +567,45 @@ button.card-pro__button[disabled] {
     bottom: 0;
     z-index: 1;
     background: linear-gradient(0deg, #2A2A2A 40.16%, rgba(0, 0, 0, 0) 94.47%);
-
 }
-
+.notification-item{
+    font-weight: 500;
+    padding: 18px 20px;
+    border-radius: 15px;
+}
+.notification-item__image{
+    width: 42px;
+    height: 42px;
+}
+.notification-item__title{
+    font-size: 1.05em;
+    overflow: hidden;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
+.notification-item__text,
+.notification-item__time{
+    font-size: 0.8em;
+}
+.notification-item__text{
+    line-height: 1.3;
+    overflow: hidden;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    line-clamp: 2;
+    -webkit-box-orient: vertical;
+}
+.notification-item__time .circle{
+    width: 7px;
+    height: 7px;
+    background-color: #F97255;
+}
 @media (max-width: 576px) {
     .section-profile__body {
         padding: 12px;
@@ -582,7 +625,8 @@ button.card-pro__button[disabled] {
         padding-left: 15px;
     }
 
-    .customer-item {
+    .customer-item,
+    .notification-item{
         gap: 5px;
         padding: 15px;
     }
