--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -552,6 +552,27 @@ textarea:focus {
 .font-heading {
     font-family: var(--font-heading) !important;
 }
+.form-check.form-switch{
+    gap:8px;
+}
+.form-switch{
+    padding-left: inherit;
+}
+.form-switch .form-check-input{
+    width: 2.3em;
+    height: 1.2em;
+    margin-top: 0;
+    margin-left: unset;
+    background-color: #B8A0F8;
+    border-color: #B8A0F8;
+    border: 1px solid #B8A0F8;
+    background-position: left center;
+    background-image: url('data:image/svg+xml,%3csvg xmlns="http://www.w3.org/2000/svg" viewBox="-4 -4 8 8"%3e%3ccircle r="3" fill="%23ffffff" /%3e%3c/svg%3e');
+}
+.form-check-input:checked{
+    border-color: var(--primary-color);
+    background-color: var(--primary-color);
+}
 
 .section-page {
     padding: 50px 0 70px 0;
@@ -582,7 +603,6 @@ textarea:focus {
     font-weight: 600;
     margin-bottom: 0;
 }
-
 .heading-description {
     margin-top: 8px;
     font-weight: 500;
