--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -9,7 +9,7 @@
 
     /* Color Base */
     --primary-color: #19224D;
-    --primary-hover: #149892;
+    --primary-hover: #131c44;
     --primary-rgb: 26, 173, 166;
 
     --secondary-color: #AC8EFA;
@@ -518,6 +518,159 @@ textarea:focus {
 .button-theme.button-theme_outline_dark:active svg path {
     fill: var(--bs-white);
 }
+.c-scrim {
+    background-color: rgba(0, 0, 0, 0.4);
+    z-index: 1058;
+}
+
+.c-datepicker {
+    z-index: 1059;
+    min-height: 350px;
+    padding-bottom: 85px;
+    border-radius: 24px;
+    overflow: hidden;
+    top: 75%;
+}
+
+.c-datepicker__calendar {
+    height: auto;
+}
+
+
+.c-datepicker.c-datepicker {
+    top: 50%;
+}
+
+.c-datepicker,
+.c-datepicker:after,
+.c-datepicker:before,
+.c-datepicker *,
+.c-datepicker *:after,
+.c-datepicker *:before {
+    -webkit-box-sizing: unset;
+    box-sizing: unset;
+}
+
+.c-datepicker__header,
+.c-datepicker__clock,
+.c-datepicker .c-datepicker--show-time:after,
+.c-datepicker .c-datepicker--show-calendar:after {
+    display: none !important;
+}
+
+.c-datepicker__header-day {
+    background-color: var(--primary-color);
+}
+
+.c-datepicker__header-date {
+    background-color: var(--primary-hover);
+}
+
+.c-datepicker__header-date__month {
+    font-size: 1.3em;
+}
+
+.c-datepicker__header-date__day {
+    line-height: 1.35;
+    font-size: 4em;
+}
+
+.c-datepicker__header-date__time {
+    font-size: 1.7em;
+}
+
+.c-datepicker__clock-hands {
+    background-color: var(--secondary-color);
+}
+
+.c-datepicker__day--selected {
+    color: var(--bs-white);
+}
+
+.c-datepicker__day--selected::after {
+    background-color: var(--secondary-color) !important;
+    z-index: -1;
+}
+
+.c-datepicker__hour-hand,
+.u-hover-ball-effect:hover:before, .c-datepicker__day-body:hover:before, .c-datepicker__clock__num:hover:before, .c-datepicker__clock__am-pm-toggle label:hover:before {
+    background-color: var(--secondary-color-50) !important;
+}
+
+.c-btn {
+    color: var(--dark-700);
+    padding: 8px 24px;
+    border-radius: 25px;
+    border: 1px solid transparent;
+    width: calc(100% / 2 - 5px);
+    font-weight: 600;
+}
+.c-btn:hover{
+    opacity: 0.9;
+}
+.rd-month-label {
+    font-size: 16px;
+    font-weight: 500;
+}
+
+.c-datepicker__day-head {
+    color: var(--dark-color);
+}
+
+.c-datepicker__day-head,
+.c-datepicker__day-body {
+    font-size: 14px;
+}
+
+.c-datepicker .modal-btns {
+    float: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    align-items: center;
+    gap:5px;
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+    width: calc(100% - 20px);
+}
+
+.c-datepicker .modal-btns .js-ok {
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    outline: none;
+    gap: 8px;
+    display: -webkit-inline-box;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    -webkit-transition: var(--transition-default);
+    -o-transition: var(--transition-default);
+    transition: var(--transition-default);
+    white-space: nowrap;
+    background-color: var(--secondary-color);
+    color: var(--bs-white);
+}
+
+.c-datepicker .modal-btns .js-ok:active {
+    background-color: var(--secondary-color);
+}
+
+.c-datepicker .modal-btns .js-cancel {
+    color: var(--bs-white);
+    background-color: var(--bs-black);
+}
+.c-datepicker .modal-btns .js-cancel:hover{
+    opacity: 0.8;
+}
 
 .bg-gradient {
     background: var(--bg-gradient) !important;
@@ -573,7 +726,15 @@ textarea:focus {
     border-color: var(--primary-color);
     background-color: var(--primary-color);
 }
-
+.bg-white-after::after{
+    position: absolute;
+    content: '';
+    left: 0;
+    top:100%;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--bs-white);
+}
 .section-page {
     padding: 50px 0 70px 0;
 }
