--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -772,6 +772,79 @@ button.card-pro__button[disabled] {
     height: calc(100% - 50px);
 }
 
+.page-survey__create .form-group .form-label {
+    font-size: 1.15em;
+    font-weight: 500;
+    color: var(--primary-color);
+    margin-bottom: 5px;
+}
+
+.page-survey__create .form-group .form-control,
+.page-survey__create .search-select .search-select__input{
+    border: 1px solid #CECECE;
+    box-shadow: 0px 0px 32px 0px #00000003;
+    border-radius: 10px;
+    height: 45px;
+    font-size: 1.1em;
+    color:var(--primary-color);
+    padding: 3px 12px;
+}
+.page-survey__create .search-select ul{
+    position: absolute;
+    top:100%;
+    left: 0;
+    width: 100%;
+    padding: 10px;
+    background-color: var(--bs-white);
+    border-radius: 10px;
+    transform: translateY(10px);
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    z-index: 1;
+}
+.page-survey__create .search-select:hover ul{
+    transform: translateY(5px);
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+.page-survey__create .search-select ul li{
+    padding: 10px 0;
+}
+.page-survey__create .search-select ul li:not(:last-child){
+    border-bottom: 1px solid #cebef65c;
+}
+.page-survey__create .search-select .search-select__input svg{
+    width: 12px;
+    height: 12px;
+}
+.page-survey__create .form-group .form-control:focus{
+    border: 1px solid var(--secondary-color);
+}
+
+.page-survey__create .form-group .form-control::placeholder {
+    color: #CECECE;
+}
+.survey-create__button{
+    color:var(--secondary-color);
+}
+.survey-create__button:hover{
+    color:var(--secondary-color-50);
+}
+.survey-create__button svg{
+    width: 16px;
+    height: 16px;
+}
+.survey-create__center{
+    overflow-y: auto;
+}
+.survey-create__center .survey-list{
+    height: calc(100% - 50px);
+    overflow-y: auto;
+}
+
+
 @media (max-width: 576px) {
     .section-profile__body {
         padding: 12px;
